[#2033] Fixed overlapping bar

--- a/Dashboard/app/css/main.scss
+++ b/Dashboard/app/css/main.scss
@@ -5879,7 +5879,7 @@ li.disable {
     top: 96px;
     left: 0px;
     right: 0px;
-    z-index: 99999;
+    z-index: 9999;
     background-color: white;
     box-shadow: 0 1px 3px rgba(32, 32, 36, 0.1);
     width: 99.5%;
